2008-03-07  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* main.cc : removed the static variable record_seen_updates,
	(NB81739).

2008-03-07  Mario Sanchez Prada  <msanchez@maemo.org>

	Added the 'Updating' banner to be shown when the operation
	APTCMD_GET_CATALOGUES takes too much time before filling the
	dialog (not likely, but possible).

	* src/repo.cc (cat_response): Call to hide_updating when the
	dialog is closed.
	(scd_get_catalogues_reply): Call to prevent_updating to avoid
	showing the banner once the information was already retrieved.
	(show_catalogue_dialog): Call to show_updating right after
	creating and showing the dialog.

	* src/details.cc (add_table_field): Also allow to set only a
	'value' field text when no 'field' field text is specified.

2008-03-06  Mario Sanchez Prada  <msanchez@maemo.org>

	Filled an 'interaction flow' gap which always happened when
	opening the 'Application catalogues...' dialog.

	* src/repo.cc (show_catalogue_dialog_flow): Don't call to
	get_catalogues before showing the dialog. Just call to
	show_catalogue_dialog and let it to call to get_catalogues once
	the information was retrieved. Moved up in this file.
	(scdf_with_catalogues): Removed, since it's not needed anymore
	after changes described above. Moved up in this file.
	(scdf_dialog_done): Moved up in this file.
	(scdf_end): Likewise.
	(struct catcache): Added a new field 'showing_catalogues' to keep
	track whether the catalogues information is already being shown in
	the dialog or not.
	(current_cat_dialog_clos): New global variable to keep track of
	the currently data being shown in the catalogues dialog. Useful to
	check out-of-sync replies from the AW while the dialog is open.
	(set_cat_list): Don't accept NULL as a catalogues xexp, which
	would mean 'there're no catalogues to be set'.
	(cat_response): Take care of setting current_cat_dialog_clos to
	NULL when the dialog is closed.
	(scd_get_catalogues_reply): New function which handles the reply