@@ -1,3 +1,12 @@
+2008-03-07  Marius Vollmer  <marius.vollmer@nokia.com>
+
+	* src/operations.cc (up_remove, up_remove_with_info): Call
+	get_package_info so that the removable_status is guaranteed to be
+	set.
+
+	* src/main.h (get_package_info): Renamed onyl_basic_info to
+	only_installable_info for extra clarity.
+
 2008-03-07  Felipe Erias Morandeira  <femorandeira@maemo.org>
 
 	* main.cc : removed the static variable record_seen_updates,
